--- a/IniGadget/Views/Shared/_DashboardLayout.cshtml
+++ b/IniGadget/Views/Shared/_DashboardLayout.cshtml
@@ -11,22 +11,22 @@
             <!-- Menu -->
             <p class="text-white fw-bold mt-3">Menu</p>
             <div>
-                <a class="btn w-100 text-start @(currentAction == "Index" ? " btn-light text-success fw-semibold" : "text-white")" asp-action="Index" asp-controller="Dashboard">
+                <a class="btn w-100 text-start @(currentAction == "Index" ? " btn-light text-success font-semibold" : "text-white")" asp-action="Index" asp-controller="Dashboard">
                     <i class="bi bi-grid me-2"></i> Dashboard
                 </a>
             </div>
             <div class="">
-                <a class="btn w-100 text-start @(currentAction == "Analytics" ? " btn-light text-success fw-semibold" : "text-white")" asp-action="Analytics" asp-controller="Dashboard">
+                <a class="btn w-100 text-start @(currentAction == "Analytics" ? " btn-light text-success font-semibold" : "text-white")" asp-action="Analytics" asp-controller="Dashboard">
                     <i class="bi bi-graph-up-arrow me-2"></i> Analitik
                 </a>
             </div>
             <div>
-                <a class="btn w-100 text-start @(currentAction == "Sales" ? " btn-light text-success fw-semibold" : "text-white")" asp-action="Sales" asp-controller="Dashboard">
+                <a class="btn w-100 text-start @(currentAction == "Sales" ? " btn-light text-success font-semibold" : "text-white")" asp-action="Sales" asp-controller="Dashboard">
                     <i class="bi bi-percent me-2"></i> Penjualan
                 </a>
             </div>
             <div>
-                <a class="btn w-100 text-start @(currentAction == "Users" ? " btn-light text-success fw-semibold" : "text-white")" asp-action="Users" asp-controller="Dashboard">
+                <a class="btn w-100 text-start @(currentAction == "Users" ? " btn-light text-success font-semibold" : "text-white")" asp-action="Users" asp-controller="Dashboard">
                     <i class="bi bi-person me-2"></i> Pengguna
                 </a>
             </div>
@@ -34,7 +34,7 @@
             <!-- Menu -->
             <p class="text-white fw-bold mt-3">Produk</p>
             <div>
-                <a class="btn w-100 text-start @(currentAction == "Categories" ? " btn-light text-success fw-semibold" : "text-white")" asp-action="Categories" asp-controller="Dashboard">
+                <a class="btn w-100 text-start @(currentAction == "Categories" ? " btn-light text-success font-semibold" : "text-white")" asp-action="Categories" asp-controller="Dashboard">
                     <i class="bi bi-tags me-2"></i> Kategori
                 </a>
             </div>
