fix: ubah style card product agar menjadi row

--- a/IniGadget/Views/Shared/_DashboardLayout.cshtml
+++ b/IniGadget/Views/Shared/_DashboardLayout.cshtml
@@ -10,7 +10,7 @@
 
             <!-- Menu -->
             <p class="text-white fw-bold mt-3">Menu</p>
-            <div>
+            @* <div>
                 <a class="btn w-100 text-start @(currentAction == "Index" ? " btn-light text-success font-semibold" : "text-white")" asp-action="Index" asp-controller="Dashboard">
                     <i class="bi bi-grid me-2"></i> Dashboard
                 </a>
@@ -24,7 +24,7 @@
                 <a class="btn w-100 text-start @(currentAction == "Sales" ? " btn-light text-success font-semibold" : "text-white")" asp-action="Sales" asp-controller="Dashboard">
                     <i class="bi bi-percent me-2"></i> Penjualan
                 </a>
-            </div>
+            </div> *@
             <div>
                 <a class="btn w-100 text-start @(currentAction == "Users" ? " btn-light text-success font-semibold" : "text-white")" asp-action="Users" asp-controller="Dashboard">
                     <i class="bi bi-person me-2"></i> Pengguna
