--- a/IniGadget/Views/Home/Index.cshtml
+++ b/IniGadget/Views/Home/Index.cshtml
@@ -2,7 +2,17 @@
     ViewData["Title"] = "Home Page";
     Layout = "_HomeLayout";
 }
+@using System.Globalization;
 @model ProductCategoryList
+
+@functions {
+    public string FormatRupiah(ulong? amount)
+    {
+        double doubleAmount = (double)amount;
+        CultureInfo indo = new CultureInfo("id-ID");
+        return "Rp." + doubleAmount.ToString("N0", indo);
+    }
+}
 
 <!-- Banner Section -->
 <section class="card bg-dark text-white rounded-3 overflow-hidden my-4" style="width: 100%; height: 300px; border-radius: 50px;">
@@ -33,16 +43,17 @@
     <div class="container py-5">
         <h3 class="text-center text-success">Rekomendasi Produk</h3>
         <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 gap-2">
-            <div class="col">
-                @foreach(var p in Model.Products)
-                {
-                    <div class="card">
-                        <img class="card-img-top" src="~/images/products/@p.ImagePath" alt="Card Image" />
-                        <div class="card-body">
-                            <h5 class="card-title">@p.Name</h5>
-                        </div>
+            @foreach(var p in Model.Products)
+            {
+                <div class="card">
+                    <img class="card-img-top" src="~/images/products/@p.ImagePath" alt="Card Image" />
+                    <div class="card-body">
+                        <h5 class="card-title">@p.Name</h5>
+                        <p>@FormatRupiah(p.Price)</p>
                     </div>
-                }
+                </div>
+            }
+            <div class="col">
             </div>
         </div>
     </div>
